# RustBackendWithWebActix

./: Cargo.toml  depthconfig.json  earningsconfig.json  readme.md  swapconfig.json  temp copy.yaml  temp.yaml
midgard_data/: 1.available.json  2.rune_pool.json  depth_price.json  earning_history.json  swaps_history.json
src/: main.rs
src/adaptors/: mod.rs
src/adaptors/db/: depth_controller.rs  earning_controller.rs  employee_repo.rs  mod.rs  runepool_controller.rs  swaps_controller.rs
src/adaptors/webhandlers/: depth_handler.rs  earnings_handler.rs  employee_handler.rs  mod.rs  runepool_handler.rs  swaps_handler.rs  temp.rs
src/adaptors/webhandlers/queries/: mod.rs
src/config/: mod.rs
src/domain/: depth.rs  earnings.rs  mod.rs  runepool.rs  swaps.rs
src/usecases/: employee_usecases.rs
src/utilities/: mod.rs
src/utilities/Fetch_data/: fetch_RUNEPool.rs  fetch_depth.rs  fetch_earnings.rs  fetch_swaps.rs  mod.rs
status/: depthconfig.json  earningsconfig.json  runepoolconfig.json  swapconfig.json
