[package]
name = "clean-arch-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = {version= "*" ,features= ["derive"] }
tokio = {version = "*" , features=["macros","rt-multi-thread","full"]}
sqlx = {version="0.6" , features= ["mysql","runtime-tokio-native-tls","time","chrono","decimal"]}
reqwest = { version = "*", features = ["json"] }
serde_json = "*"
chrono="*"
